# wp1.7-soa-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_LEO.txt  README.md  Sync_benchmark_64_add_gpu.h  Sync_benchmark_add_gpu.h  Sync_benchmark_posvel_gpu.h  Sync_benchmark_posvel_shuf_gpu.h  aos_boost.cpp  aos_manual.cpp  benchmark.h  benchmark_bitonic_sort_gpu.h  benchmark_cpu.h  benchmark_estimate_pi_gpu.h  benchmark_find_max_gpu.h  benchmark_gpu.h  edg_config.cmake  impact_benchmark.py  kernel.cu  plot.py  plot_benchmark.py  plot_benchmarks.py  plot_impact.py  plot_new.py  pxpypzm.h  run_benchmarks.py  run_benchmarks_with_vtune.py  snbody.h  soa_boost.cpp  soa_manual.cpp  soa_versions.csv  soa_wrapper.cpp  soa_wrapper_cpu.cpp  soa_wrapper_gpu.cu  sstencil.h
.github/actions/plot-benchmarks/: action.yml
.github/workflows/: github-ci.yml  soa-benchmark-clang-p2996.yml  soa-benchmark-clang.yml  soa-benchmark-edg.yml  soa-benchmark-gcc.yml  soa-benchmark-refl.yml  soa-benchmark-vtune.yml  soa-benchmark.yml
benchmarks/: backend.h  bm_easy.h  bm_hard.h  bm_invmass.h  bm_nbody.h  bm_real.h  bm_stencil.h  bm_strided.h  common.h  easy.h  easycompute.h  hard.h  invmass.h  nbody.h  real.h  stencil.h  strided.h
boost/: SoACommon.h  SoALayout.h
cuda/: kernel.cu  kernel.h
manual/: CMakeLists.txt  aos_manual.cpp  aos_manual_cpu.cpp  aos_manual_gpu.cu  aos_structs.h  soa_manual.cpp  soa_manual_cpu.cpp  soa_manual_gpu.cu  soa_structs.h
memlayout/: CMakeLists.txt  aos_wrapper.cpp  aos_wrapper_cpu.cpp  aos_wrapper_gpu.cu  soa_wrapper.cpp  soa_wrapper_cpu.cpp  soa_wrapper_gpu.cu  structs.h  wrapper.h
refl/: CMakeLists.txt  soa_refl.cpp  soa_struct_splitter.cpp  soa_token_injection.cpp  soa_versions_with_clang_p2996.csv  soa_versions_with_edg.csv  soa_versions_with_refl.csv  soa_wrapper_refl.cpp
reflections/: CMakeLists.txt  soa_reflections.cpp  soa_reflections_cpu.cpp  structs.h  wrapper.h
wrapper/: allocator.h  decorator.h  factory.h  helper.h  wrapper.h
